<resources>
    <string name="app_name">mimik Smart Home</string>
    <string name="mimik_logo">mimik logo</string>
    <string name="toast_start">Edge service started.</string>
    <string name="toast_failed_start">Failed to start edge service.</string>
    <string name="install_service_required_title">Additional install required</string>
    <string name="install_service_required">Please download the mimik edge service to begin sharing files with your friends and personal devices.</string>
    <string name="install_service_button">Open Play Store</string>
    <string name="toast_login">Edge token acquired.</string>
    <string name="toast_unassociate">Edge service unassociated.</string>
    <string name="toast_failed_login">Failed to login to portal.</string>
    <string name="toast_failed_unassociate">Failed to unassociate edge service.</string>
    <string name="toast_mcm">Docked the microservice.</string>
    <string name="toast_failed_mcm">Failed to dock microservice.</string>
    <string name="toast_message_mcm">Docked the message microservice.</string>
    <string name="toast_superdrive_mcm">Docked the superdrive microservice.</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="answer">Answer</string>
    <string name="ignore">Ignore</string>
    <string name="send_media">Send media</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="state_indicator">State indicator</string>
    <string name="logged_in">logged in</string>
    <string name="superdrive_installed">super-drive installed</string>
    <string name="messaging_installed">messaging installed</string>
    <string name="end_call">End call</string>
    <string name="camera_and_audio_rationale">The primary function of this app is video communications and as such it requires permissions to access the Camera and Microphone.</string>
    <string name="passwordtxt">Password</string>
    <string name="title_activity_hplogin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username_password">Not a valid username or password </string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Admin_User">Admin User:</string>
    <string name="Admin_Password">Admin Password:</string>
    <string name="Admin_Login_form">Admin login</string>
    <string name="VirtualKeys">Virtual Keys</string>
    <string name="FoB">FoB</string>
    <string name="Users">Users</string>
    <string name="password">Password</string>
    <string name="open_door">Open Door</string>
    <string name="call_unit">Call Unit</string>
    <string name="unit_or_buzz_number">Unit or Buzz Number</string>
    <string name="unit_configuration">Unit Configuration</string>
    <string name="date_time">Date and Time</string>
    <string name="firm_ware">Update FrimWare</string>
    <string name="reset_factory">Reset Factory</string>
    <string name="unit_info">Unit Information</string>
    <string name="node_id">Node ID</string>
    <string name="owner_info">Owner Information</string>
    <string name="unit_num">Unit Number</string>
    <string name="buzz_id">Buzz ID</string>
    <string name="owner_id">Owner ID</string>
    <string name="save_settings">Save</string>
    <string name="teel_number">Phone Number</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_email">Email</string>
    <string name="logs">Log\'s</string>
    <string name="key_generator">Virtual Key Generator</string>
    <string name="mobile_app">Mobile Application Settings</string>
    <string name="durations">Durations (days)</string>
    <string name="start_date">Start Date :</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="generate_temp_pass">Generate Password</string>
    <string name="temporary_generator">Security Generator</string>
    <string name="name">Name</string>
    <string name="buzz_number">Buzz Number</string>
    <string name="expired">Expired</string>
    <string name="date">Date</string>
    <string name="qr_code">QR Code</string>

</resources>
