<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_logs_id"
        android:enabled="true"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/logs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_v_keys_generator_id"
        android:enabled="true"
        android:icon="@drawable/qr_code"
        android:title="@string/key_generator"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_mobile_app_id"
        android:enabled="true"
        android:icon="@drawable/application"
        android:title="@string/mobile_app"
        app:showAsAction="ifRoom" />

</menu>