<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:id="@+id/relative_unit_info"
        android:layout_height="match_parent">

        <TextView
            android:textAlignment="center"
            android:id="@+id/txt_unit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/unit_info"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/l_edittext_1"
            android:layout_below="@id/txt_unit_info"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/node_id"
            app:boxStrokeWidth="2dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            app:hintTextColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/txt_node_id_id"
                android:textAlignment="center"
                android:maxLength="20"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/l_edittext_2"
            android:layout_below="@id/l_edittext_1"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/unit_num"
            app:boxStrokeWidth="2dp"
            android:textAlignment="center"
            app:hintTextColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:textAlignment="center"
                android:maxLength="20"
                android:textSize="24sp"
                android:id="@+id/txt_unit_num_id"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/l_edittext_3"
            android:layout_below="@id/l_edittext_2"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/buzz_id"
            app:boxStrokeWidth="2dp"
            android:textAlignment="center"
            app:hintTextColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:maxLength="20"
                android:id="@+id/txt_buzz_id_id"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:id="@+id/l_edittext_4"
            android:layout_below="@id/l_edittext_3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/owner_id"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:maxLines="1"
                android:id="@+id/txt_owner_id_id"
                android:maxLength="20"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/save_settings"
            android:elevation="5dp"
            android:drawableLeft="@drawable/ic_save_black_24dp"
            android:id="@+id/btn_save_unit_info_id"
            android:textAlignment="center"
            android:layout_below="@id/l_edittext_4"
            android:textSize="24sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#244955"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:padding="25dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>