<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/temporary_generator"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/txt_simple_info"
        android:textColor="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_qr_code_id"
        android:layout_width="200dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="200dp"/>

    <TextView
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="50sp"
        android:visibility="gone"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/txt_temp_password_id"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/start_date"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:layout_below="@id/l_edittext_1"
        android:id="@+id/txt_start_date_info"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <DatePicker
        android:spinnersShown="true"
        android:layout_below="@id/txt_start_date_info"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/datepicker_qr_id"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/l_edittext_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/durations"
        app:boxStrokeWidth="2dp"
        android:layout_below="@id/txt_simple_info"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        app:hintTextColor="@android:color/black"
        app:boxStrokeColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:maxLines="1"
            android:id="@+id/txt_owner_owner_id_id"
            android:textAlignment="center"
            android:maxLength="2"
            android:inputType="phone"
            android:textSize="24sp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/l_btn"
        android:gravity="center"
        android:layout_below="@id/datepicker_qr_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/generate_qr_code"
            android:elevation="5dp"
            android:drawableLeft="@drawable/qr_code"
            android:id="@+id/btn_qr_code_generate_id"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:textColor="#244955"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/generate_temp_pass"
            android:elevation="5dp"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/pass_generate"
            android:id="@+id/btn_temp_password_generate_id"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:textColor="#244955"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_below="@id/l_btn"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        app:elevation="5dp"
        app:rippleColor="@android:color/white"
        android:src="@drawable/ic_share_black_24dp"
        android:layout_height="wrap_content"/>
</RelativeLayout>