<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstpage"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/scan_for_devices" />

        <ProgressBar
            android:id="@+id/callProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="499dp"
            android:layout_height="128dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonIgnore"
                android:layout_width="225dp"
                android:layout_height="48sp"
                android:layout_gravity="bottom"
                android:layout_margin="16sp"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="20"
                android:adjustViewBounds="true"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/ignore"
                android:cropToPadding="false"
                android:focusable="true"
                android:src="@drawable/ic_call_end_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:clickable="true" />

            <ImageButton
                android:id="@+id/buttonAnswer"
                android:layout_width="227dp"
                android:layout_height="49dp"
                android:layout_gravity="bottom"
                android:layout_margin="16sp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="20"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/answer"
                android:focusable="true"
                android:src="@drawable/ic_phone_in_talk_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonIgnore"
                app:layout_constraintStart_toStartOf="parent"
                tools:clickable="true" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="387dp"
        android:layout_height="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>